--- a/source/form.html
+++ b/source/form.html
@@ -4,26 +4,24 @@
     <meta charset="utf-8">
     <title>HTML Academy: Кэт энерджи</title>
     <link href="css/style.css" rel="stylesheet">
-    <linl href="css/normalize.css" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@400;700&display=swap" rel="stylesheet">
   </head>
 
   <body class="page__body page-body">
 
-    <header class="page-body__header page-header container">
+    <header class="page-body__header page-header">
       <a class="page-header__logo" href="index.html">
         <img class="page-header__logo-image logo-header" src="https://via.placeholder.com/191x37" width="191" height="37" alt="Логотип «Кэт энерджи»">
       </a>
       <nav class="page-header__main-nav main-nav">
         <button class="main-nav__toggle" type="button"><span class="visually-hidden">Открыть меню</span></button>
         <ul class="main-nav__list site-menu">
-          <li class="site-menu__item site-menu__item--active">
+          <li class="site-menu__item">
             <a href="index.html">Главная</a>
           </li>
           <li class="site-menu__item">
             <a href="catalog.html">Каталог продукции</a>
           </li>
-          <li class="site-menu__item">
+          <li class="site-menu__item site-menu__item--active">
             <a>Подбор программы</a>
           </li>
         </ul>
@@ -59,15 +57,15 @@
           <legend class="visually-hidden">Выбор программы</legend>
           <p class="form__program">
             <input class="form__radio" type="radio" name="programm" value="slimming" id="slimming" checked>
-            <label class="form__label" for="slimming">Похудение</label>
+            <label class="form__label-radio" for="slimming">Похудение</label>
           </p>
           <p class="form__program">
             <input class="form__radio" type="radio" name="programm" value="weight-gain" id="weight-gain">
-            <label class="form__label" for="weight-gain">Набор массы</label>
+            <label class="form__label-radio" for="weight-gain">Набор массы</label>
           </p>
           <p class="form__program">
             <input class="form__radio" type="radio" name="programm" value="not-know" id="not-know">
-            <label class="form__label" for="not-know">Не знаю (Нужен ваш совет)</label>
+            <label class="form__label-radio" for="not-know">Не знаю (Нужен ваш совет)</label>
           </p>
         </fieldset>
 
@@ -87,13 +85,13 @@
         <fieldset class="form__group">
           <legend class="form__legend">Дополнительно</legend>
           <input class="form__checkbox" type="checkbox" name="sweetener" id="sweetener" checked>
-          <label class="form__label" for="sweetener">Сахарозаменитель</label>
+          <label class="form__label-checkbox" for="sweetener">Сахарозаменитель</label>
           <input class="form__checkbox" type="checkbox" name="drinking-water" id="drinking-water">
-          <label class="form__label" for="drinking-water">Питьевая вода</label>
+          <label class="form__label-checkbox" for="drinking-water">Питьевая вода</label>
           <input class="form__checkbox" type="checkbox" name="milk" id="milk">
-          <label class="form__label" for="milk">Молоко</label>
+          <label class="form__label-checkbox" for="milk">Молоко</label>
           <input class="form__checkbox" type="checkbox" name="vitamins" id="vitamins">
-          <label class="form__label" for="vitamins">Витамины</label>
+          <label class="form__label-checkbox" for="vitamins">Витамины</label>
         </fieldset>
         <button class="form__submit button" type="submit">отправить заявку</button>
         <small class="form__small">* — Обязательные поля</small>
@@ -102,30 +100,32 @@
     </main>
 
     <footer class="page-body__footer page-footer">
-      <div class="page-footer__address container">
-        <p class="page-footer__slogan">
-          приглашаем к сотрудничеству дилеров!
-        </p>
-        <p class="page-footer__text">
-          ул. Большая
-          Конюшенная, д. 19/8
-          Санкт-Петербург
-        </p>
+      <div class="page-footer__address address container">
+        <div class="address__wrapper">
+          <p class="page-footer__slogan">
+            приглашаем к сотрудничеству дилеров!
+          </p>
+          <p class="page-footer__text">
+            ул. Большая
+            Конюшенная, д. 19/8
+            Санкт-Петербург
+          </p>
+        </div>
       </div>
-      <img class="page-footer__map" src="https://via.placeholder.com/320x362" width="320" height="362" alt="ул. Большая Конюшенная, д. 19/8 Санкт-Петербург">
+      <img class="page-footer__map" src="img/location.png" width="320" height="362" alt="ул. Большая Конюшенная, д. 19/8 Санкт-Петербург">
       <div class="page-footer__container container">
-        <a class="page-footer__logo" href="index.html">
+        <a class="page-footer__logo">
           <img class="page-footer__logo-image logo-footer" src="https://via.placeholder.com/128x24" width="128" height="24" alt="Логотип «Кэт энерджи»">
         </a>
-        <ul class="page-footer__social-list">
-          <li class="page-footer__social-item">
-            <a class="page-footer__social-link page-footer__social-link--vkontakte" href="#"><span class="visually-hidden">Мы в контакте</span></a>
+        <ul class="page-footer__social social-list">
+          <li class="social-list__social-item">
+            <a class="social-list__social-link social-list__social-link--vkontakte" href="#"><span class="visually-hidden">Мы в контакте</span></a>
           </li>
-          <li class="page-footer__social-item">
-            <a class="page-footer__social-link page-footer__social-link--instagram" href="#"><span class="visually-hidden">Мы в инстаграмм</span></a>
+          <li class="social-list__social-item">
+            <a class="social-list__social-link social-list__social-link--instagram" href="#"><span class="visually-hidden">Мы в инстаграмм</span></a>
           </li>
-          <li class="page-footer__social-item">
-            <a class="page-footer__social-link page-footer__social-link--facebook" href="#"><span class="visually-hidden">Мы в фэйсбук</span></a>
+          <li class="social-list__social-item">
+            <a class="social-list__social-link social-list__social-link--facebook" href="#"><span class="visually-hidden">Мы в фэйсбук</span></a>
           </li>
         </ul>
 
