--- a/source/catalog.html
+++ b/source/catalog.html
@@ -36,131 +36,131 @@
 
         <div class="catalog-list__product product">
 
-          <aside class="product__item chicken-min">
-            <a class="product__link" href="#">
-              <img class="product__image" src="img/catalog-1-mobile.png" width="68" height="86" alt="Фотография контейнера корма со вкусом курицы 500 грамм">
+          <article class="product__item card">
+            <a class="card__link" href="#">
+              <img class="card__image" src="img/catalog-1-mobile.png" width="68" height="86" alt="Фотография контейнера корма со вкусом курицы 500 грамм">
             </a>
-            <a class="product__link" href="#">
-              <h3 class="product__title">Cat Energy PRO 500 г</h3>
+            <a class="card__link" href="#">
+              <h3 class="card__title">Cat Energy PRO 500 г</h3>
             </a>
-            <dl class="product__list">
-              <dt class="product__definition">Масса</dt>
-              <dd class="product__description">500г</dd>
-              <dt class="product__definition">Вкус</dt>
-              <dd class="product__description">Курица</dd>
-              <dt class="product__definition">Цена</dt>
-              <dd class="product__description">700 Р.</dd>
+            <dl class="card__list">
+              <dt class="card__definition">Масса</dt>
+              <dd class="card__description">500г</dd>
+              <dt class="card__definition">Вкус</dt>
+              <dd class="card__description">Курица</dd>
+              <dt class="card__definition">Цена</dt>
+              <dd class="card__description">700 Р.</dd>
             </dl>
-            <a class="product__link button" href="#">Заказать</a>
-          </aside>
+            <a class="card__link button" href="#">Заказать</a>
+          </article>
 
-          <aside class="product__item chicken-max">
-            <a class="product__link" href="#">
-              <img class="product__image" src="img/catalog-2-mobile.png" width="84" height="100" alt="Фотография контейнера корма со вкусом курицы 100 грамм">
+          <article class="product__item card">
+            <a class="card__link" href="#">
+              <img class="card__image" src="img/catalog-2-mobile.png" width="84" height="100" alt="Фотография контейнера корма со вкусом курицы 100 грамм">
             </a>
-            <a class="product__link" href="#">
-              <h3 class="product__title">Cat Energy PRO 1000 г</h3>
+            <a class="card__link" href="#">
+              <h3 class="card__title">Cat Energy PRO 1000 г</h3>
             </a>
-            <dl class="product__list">
-              <dt class="product__definition">Масса</dt>
-              <dd class="product__description">1000 г</dd>
-              <dt class="product__definition">Вкус</dt>
-              <dd class="product__description">Курица</dd>
-              <dt class="product__definition">Цена</dt>
-              <dd class="product__description">1000 Р.</dd>
+            <dl class="card__list">
+              <dt class="card__definition">Масса</dt>
+              <dd class="card__description">1000 г</dd>
+              <dt class="card__definition">Вкус</dt>
+              <dd class="card__description">Курица</dd>
+              <dt class="card__definition">Цена</dt>
+              <dd class="card__description">1000 Р.</dd>
             </dl>
-            <a class="product__link button" href="#">Заказать</a>
-          </aside>
+            <a class="card__link button" href="#">Заказать</a>
+          </article>
 
-          <aside class="product__item fish-min">
-            <a class="product__link" href="#">
-              <img class="product__image" src="img/catalog-3-mobile.png" width="68" height="78" alt="Фотография контейнера корма со вкусом рыбы 500 грамм">
+          <article class="product__item card">
+            <a class="card__link" href="#">
+              <img class="card__image" src="img/catalog-3-mobile.png" width="68" height="78" alt="Фотография контейнера корма со вкусом рыбы 500 грамм">
             </a>
-            <a class="product__link" href="#">
-              <h3 class="product__title">Cat Energy PRO 500 г</h3>
+            <a class="card__link" href="#">
+              <h3 class="card__title">Cat Energy PRO 500 г</h3>
             </a>
-            <dl class="product__list">
-              <dt class="product__definition">Масса</dt>
-              <dd class="product__description">500 г</dd>
-              <dt class="product__definition">Вкус</dt>
-              <dd class="product__description">Рыба</dd>
-              <dt class="product__definition">Цена</dt>
-              <dd class="product__description">700 Р.</dd>
+            <dl class="card__list">
+              <dt class="card__definition">Масса</dt>
+              <dd class="card__description">500 г</dd>
+              <dt class="card__definition">Вкус</dt>
+              <dd class="card__description">Рыба</dd>
+              <dt class="card__definition">Цена</dt>
+              <dd class="card__description">700 Р.</dd>
             </dl>
-            <a class="product__link button" href="#">Заказать</a>
-          </aside>
+            <a class="card__link button" href="#">Заказать</a>
+          </article>
 
-          <aside class="product__item fish-max">
-            <a class="product__link" href="#">
-              <img class="product__image" src="img/catalog-4-mobile.png" width="84" height="100" alt="Фотография контейнера корма со вкусом рыбы 1000 грамм">
+          <article class="product__item card">
+            <a class="card__link" href="#">
+              <img class="card__image" src="img/catalog-4-mobile.png" width="84" height="100" alt="Фотография контейнера корма со вкусом рыбы 1000 грамм">
             </a>
-            <a class="product__link" href="#">
-              <h3 class="product__title">Cat Energy PRO 1000 г</h3>
+            <a class="card__link" href="#">
+              <h3 class="card__title">Cat Energy PRO 1000 г</h3>
             </a>
-            <dl class="product__list">
-              <dt class="product__definition">Масса</dt>
-              <dd class="product__description">1000 г</dd>
-              <dt class="product__definition">Вкус</dt>
-              <dd class="product__description">Рыба</dd>
-              <dt class="product__definition">Цена</dt>
-              <dd class="product__description">1000 Р.</dd>
+            <dl class="card__list">
+              <dt class="card__definition">Масса</dt>
+              <dd class="card__description">1000 г</dd>
+              <dt class="card__definition">Вкус</dt>
+              <dd class="card__description">Рыба</dd>
+              <dt class="card__definition">Цена</dt>
+              <dd class="card__description">1000 Р.</dd>
             </dl>
-            <a class="product__link button" href="#">Заказать</a>
-          </aside>
+            <a class="card__link button" href="#">Заказать</a>
+          </article>
 
-          <aside class="product__item buckwheat-min">
-            <a class="product__link" href="#">
-              <img class="product__image" src="img/catalog-5-mobile.png" width="68" height="78" alt="Фотография контейнера корма со вкусом гречки 500 грамм">
+          <article class="product__item card">
+            <a class="card__link" href="#">
+              <img class="card__image" src="img/catalog-5-mobile.png" width="68" height="78" alt="Фотография контейнера корма со вкусом гречки 500 грамм">
             </a>
-            <a class="product__link" href="#">
-              <h3 class="product__title">Cat Energy SLIM 500 г</h3>
+            <a class="card__link" href="#">
+              <h3 class="card__title">Cat Energy SLIM 500 г</h3>
             </a>
-            <dl class="product__list">
-              <dt class="product__definition">Масса</dt>
-              <dd class="product__description">500г</dd>
-              <dt class="product__definition">Вкус</dt>
-              <dd class="product__description">Гречка</dd>
-              <dt class="product__definition">Цена</dt>
-              <dd class="product__description">400 Р.</dd>
+            <dl class="card__list">
+              <dt class="card__definition">Масса</dt>
+              <dd class="card__description">500г</dd>
+              <dt class="card__definition">Вкус</dt>
+              <dd class="card__description">Гречка</dd>
+              <dt class="card__definition">Цена</dt>
+              <dd class="card__description">400 Р.</dd>
             </dl>
-            <a class="product__link button" href="#">Заказать</a>
-          </aside>
+            <a class="card__link button" href="#">Заказать</a>
+          </article>
 
-          <aside class="product__item buckwheat-max">
-            <a class="product__link" href="#">
-              <img class="product__image" src="img/catalog-6-mobile.png" width="84" height="100" alt="Фотография контейнера корма со вкусом гречки 1000 грамм">
+          <article class="product__item card">
+            <a class="card__link" href="#">
+              <img class="card__image" src="img/catalog-6-mobile.png" width="84" height="100" alt="Фотография контейнера корма со вкусом гречки 1000 грамм">
             </a>
-            <a class="product__link" href="#">
-              <h3 class="product__title">Cat Energy SLIM 1000 г</h3>
+            <a class="card__link" href="#">
+              <h3 class="card__title">Cat Energy SLIM 1000 г</h3>
             </a>
-            <dl class="product__list">
-              <dt class="product__definition">Масса</dt>
-              <dd class="product__description">1000 г</dd>
-              <dt class="product__definition">Вкус</dt>
-              <dd class="product__description">Гречка</dd>
-              <dt class="product__definition">Цена</dt>
-              <dd class="product__description">700 Р.</dd>
+            <dl class="card__list">
+              <dt class="card__definition">Масса</dt>
+              <dd class="card__description">1000 г</dd>
+              <dt class="card__definition">Вкус</dt>
+              <dd class="card__description">Гречка</dd>
+              <dt class="card__definition">Цена</dt>
+              <dd class="card__description">700 Р.</dd>
             </dl>
-            <a class="product__link button" href="#">Заказать</a>
-          </aside>
+            <a class="card__link button" href="#">Заказать</a>
+          </article>
 
-          <aside class="product__item rice-min">
-            <a class="product__link" href="#">
-              <img class="product__image" src="img/catalog-7-mobile.png" width="72" height="84" alt="Фотография контейнера корма со вкусом риса 500 грамм">
+          <article class="product__item card">
+            <a class="card__link" href="#">
+              <img class="card__image" src="img/catalog-7-mobile.png" width="72" height="84" alt="Фотография контейнера корма со вкусом риса 500 грамм">
             </a>
-            <a class="product__link" href="#">
-              <h3 class="product__title">Cat Energy SLIM 500 г</h3>
+            <a class="card__link" href="#">
+              <h3 class="card__title">Cat Energy SLIM 500 г</h3>
             </a>
-            <dl class="product__list">
-              <dt class="product__definition">Масса</dt>
-              <dd class="product__description">500 г</dd>
-              <dt class="product__definition">Вкус</dt>
-              <dd class="product__description">Рис</dd>
-              <dt class="product__definition">Цена</dt>
-              <dd class="product__description">500 Р.</dd>
+            <dl class="card__list">
+              <dt class="card__definition">Масса</dt>
+              <dd class="card__description">500 г</dd>
+              <dt class="card__definition">Вкус</dt>
+              <dd class="card__description">Рис</dd>
+              <dt class="card__definition">Цена</dt>
+              <dd class="card__description">500 Р.</dd>
             </dl>
-            <a class="product__link button" href="#">Заказать</a>
-          </aside>
+            <a class="card__link button" href="#">Заказать</a>
+          </article>
           <div class="page-main__all-goods  wrapper-all-goods">
             <b class="wrapper-all-goods__product">Показать еще 100500 товаров</b>
             <p class="wrapper-all-goods__text">На самом деле вкусов гораздо больше!</p>
