--- a/source/index.html
+++ b/source/index.html
@@ -2,6 +2,7 @@
 <html class="page" lang="ru">
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>HTML Academy: Кэт энерджи</title>
     <link href="css/style.css" rel="stylesheet">
   </head>
@@ -10,7 +11,7 @@
 
     <header class="page-body__header page-header">
       <a class="page-header__logo">
-        <img class="page-header__logo-image logo-header" src="https://via.placeholder.com/191x37" width="191" height="37" alt="Логотип «Кэт энерджи»">
+        <img class="page-header__logo-image logo-header" src="https://via.placeholder.com/191x37" width="190" height="39" alt="Логотип «Кэт энерджи»">
       </a>
       <nav class="page-header__main-nav main-nav">
         <button class="main-nav__toggle" type="button"><span class="visually-hidden">Открыть меню</span></button>
@@ -36,26 +37,29 @@
         <div class="program__wrapper container">
           <h2 class="program__wrapper-title">Функциональное питание для котов</h2>
           <p class="program__text">Занялся собой? Займись котом!</p>
-          <img src="img/index-can-mobile.png" width="280" height="270">
+          <img class="program__image" src="img/index-can-desktop.png" width="280" height="270" alt="Изображение товара">
           <a class="program__link button" href="#">Подобрать программу</a>
         </div>
       </section>
 
-      <section class="page-main__program-type program-type program-type--slimming">
-        <h2 class="program-type__title">Похудение</h2>
-        <p class="program-type__text">
-          Ваш кот весит больше собаки и почти утратил способность лазить по деревьям? Пора на диету! Cat Energy Slim поможет вашему питомцу сбросить лишний вес.
-        </p>
-        <a class="program-type__link" href="#">каталог slim</a>
-      </section>
+      <div class="page-main__program-type-wrapper">
 
-      <section class="page-main__program-type program-type program-type--weight-gain">
-        <h2 class="program-type__title">Набор массы</h2>
-        <p class="program-type__text">
-          Заработать авторитет среди дворовых котов и даже собак? Серия Cat Energy Pro поможет вашему коту нарастить необходимые мышцы!
-        </p>
-        <a class="program-type__link" href="#">каталог pro</a>
-      </section>
+        <section class="page-main__program-type program-type program-type--slimming">
+          <h2 class="program-type__title">Похудение</h2>
+          <p class="program-type__text">
+            Ваш кот весит больше собаки и почти утратил способность лазить по деревьям? Пора на диету! Cat Energy Slim поможет вашему питомцу сбросить лишний вес.
+          </p>
+          <a class="program-type__link" href="#">каталог slim</a>
+        </section>
+
+        <section class="page-main__program-type program-type program-type--weight-gain">
+          <h2 class="program-type__title">Набор массы</h2>
+          <p class="program-type__text">
+            Заработать авторитет среди дворовых котов и даже собак? Серия Cat Energy Pro поможет вашему коту нарастить необходимые мышцы!
+          </p>
+          <a class="program-type__link" href="#">каталог pro</a>
+        </section>
+      </div>
 
       <section class=" page-main__advantages advantages container">
         <h2 class="advantages__title title">Как это работает</h2>
@@ -82,11 +86,15 @@
             <p class="example__text">
               Борис сбросил 5 кг за 2 месяца, просто заменив свой обычный корм на Cat Energy Slim. Отличный результат без изнуряющих тренировок! При этом он не менял своих привычек и по-прежнему спит по 16 часов в день.
             </p>
-            <dl class="example__list">
-              <dt class="example__definition">снижение веса</dt>
-              <dd class="example__description">5кг</dd>
-              <dt class="example__definition">затрачено времени</dt>
-              <dd class="example__description">60 дней</dd>
+            <dl class="example__list result">
+              <div class="result__wrapper">
+                <dt class="result__definition">снижение веса</dt>
+                <dd class="result__description">5кг</dd>
+              </div>
+              <div class="result__wrapper">
+                <dt class="result__definition">затрачено времени</dt>
+                <dd class="result__description">60 дней</dd>
+              </div>
             </dl>
             <b class="example__expenses">Затраты на питание: 15 000 РУБ.</b>
           </div>
@@ -108,6 +116,7 @@
     </main>
 
     <footer class="page-body__footer page-footer">
+
       <div class="page-footer__address address container">
         <div class="address__wrapper">
           <p class="page-footer__slogan">
@@ -120,7 +129,8 @@
           </p>
         </div>
       </div>
-      <img class="page-footer__map" src="img/location.png" width="320" height="362" alt="ул. Большая Конюшенная, д. 19/8 Санкт-Петербург">
+      <img class="page-footer__map" src="img/map.png" width="1440" height="400" alt="ул. Большая Конюшенная, д. 19/8 Санкт-Петербург">
+
       <div class="page-footer__container container">
         <a class="page-footer__logo">
           <img class="page-footer__logo-image logo-footer" src="https://via.placeholder.com/128x24" width="128" height="24" alt="Логотип «Кэт энерджи»">
@@ -141,6 +151,7 @@
           HTML Academy<img class="page-footer__logo-academy" src="https://via.placeholder.com/27x34" width="27" height="34" alt="Логодип «Html Academy»">
         </a>
       </div>
+
     </footer>
   </body>
 </html>
