--- a/source/form.html
+++ b/source/form.html
@@ -2,99 +2,122 @@
 <html class="page" lang="ru">
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>HTML Academy: Кэт энерджи</title>
     <link href="css/style.css" rel="stylesheet">
   </head>
 
   <body class="page__body page-body">
-
-    <header class="page-body__header page-header">
-      <a class="page-header__logo" href="index.html">
-        <img class="page-header__logo-image logo-header" src="https://via.placeholder.com/191x37" width="191" height="37" alt="Логотип «Кэт энерджи»">
-      </a>
-      <nav class="page-header__main-nav main-nav">
-        <button class="main-nav__toggle" type="button"><span class="visually-hidden">Открыть меню</span></button>
-        <ul class="main-nav__list site-menu">
-          <li class="site-menu__item">
-            <a href="index.html">Главная</a>
-          </li>
-          <li class="site-menu__item">
-            <a href="catalog.html">Каталог продукции</a>
-          </li>
-          <li class="site-menu__item site-menu__item--active">
-            <a>Подбор программы</a>
-          </li>
-        </ul>
-      </nav>
-    </header>
+    <!-- <div class="container-header"> -->
+      <header class="page-body__header page-header">
+        <div class="page_header__wrapper">
+          <a class="page-header__logo">
+            <img class="page-header__logo-image logo-header" src="https://via.placeholder.com/191x37" width="190" height="39" alt="Логотип «Кэт энерджи»">
+          </a>
+          <button class="main-nav__toggle" type="button"><span class="visually-hidden">Открыть меню</span></button>
+        </div>
+        <nav class="page-header__main-nav main-nav">
+          <ul class="main-nav__list site-menu">
+            <li class="site-menu__item">
+              <a class="site-menu__link site-menu__link--color" href="index.html">Главная</a>
+            </li>
+            <li class="site-menu__item">
+              <a class="site-menu__link site-menu__link--color" href="catalog.html">Каталог продукции</a>
+            </li>
+            <li class="site-menu__item">
+              <a class="site-menu__link site-menu__link--color site-menu__item--active" href="form.html">Подбор программы</a>
+            </li>
+          </ul>
+        </nav>
+      </header>
+    <!-- </div> -->
 
     <main class="page-body__main page-main">
 
-      <div class="page-main__wrapper container">
+      <div class="page-main__wrapper">
         <h1 class="page-main__title">Подбор программы</h1>
         <p class="page-main__text">Заполните анкету, и мы подберем программу питания для вашего кота</p>
       </div>
 
-      <form class="page-main__form form container" method="post" action="https://echo.htmlacademy.ru">
+      <form class="page-main__form form" method="post" action="https://echo.htmlacademy.ru">
+        <div class="form__wrapper-cat-data">
+          <fieldset class="form__group">
+            <legend class="visually-hidden">Данные кота</legend>
+            <p class="form__cat-data form--grid">
+              <label class="form__label" for="name">Имя:*</label>
+              <input class="form__text form--input" type="text" name="name" id="name" placeholder="Барсик" required>
+            </p>
+            <p class="form__cat-data form--grid">
+              <label class="form__label" for="weight">Вес (кг):*</label>
+              <input class="form__number form--input" type="number" name="weight" id="weight" placeholder="7" required>
+            </p>
+            <p class="form__cat-data form--grid  form__cat-data--padding">
+              <label class="form__label" for="age">Возраст (лет):</label>
+              <input class="form__number form--input" type="number" name="age" id="age" placeholder="7">
+            </p>
+          </fieldset>
 
-        <fieldset class="form__group">
-          <legend class="visually-hidden">Данные кота</legend>
-          <p class="form__cat-data">
-            <label class="form__label" for="name">Имя:*</label>
-            <input class="form__text" type="text" name="name" id="name" placeholder="Барсик" required>
-          </p>
-          <p class="form__cat-data">
-            <label class="form__label" for="weight">Вес (кг):*</label>
-            <input class="form__number" type="number" name="weight" id="weight" placeholder="7" required>
-          </p>
-          <p class="form__cat-data">
-            <label class="form__label" for="age">Возраст (лет):</label>
-            <input class="form__number" type="number" name="age" id="age" placeholder="7">
-          </p>
+          <fieldset class="form__group form__group--radio">
+            <legend class="visually-hidden">Выбор программы</legend>
+            <p class="form__program">
+              <input class="form__radio" type="radio" name="programm" value="slimming" id="slimming" checked>
+              <label class="form__label-radio" for="slimming">Похудение</label>
+            </p>
+            <p class="form__program">
+              <input class="form__radio" type="radio" name="programm" value="weight-gain" id="weight-gain">
+              <label class="form__label-radio" for="weight-gain">Набор массы</label>
+            </p>
+            <p class="form__program">
+              <input class="form__radio" type="radio" name="programm" value="not-know" id="not-know">
+              <label class="form__label-radio" for="not-know">Не знаю (Нужен ваш совет)</label>
+            </p>
+          </fieldset>
+        </div>
+
+        <fieldset class="form__group form__group--border form__group--padding">
+            <legend class="form__legend">Контактные данные(владельца кота)</legend>
+          <div class="form__wrapper-data">
+            <p class="form__сat-owner form--grid">
+              <label class="form__label" for="email">E-mail:*</label>
+              <input class="form__email form--input" type="email" name="email" id="email" placeholder="kuklachev@gmail.com" required>
+            </p>
+            <p class="form__сat-owner form--grid">
+              <label class="form__label" for="tel">Телефон:*</label>
+              <input class="form__tel form--input" type="tel" name="tel" pattern="8 \(\d{3}\) \d{3}-\d{2}-\d{2}" id="tel" placeholder="8 (960) 900-60-90" required>
+            </p>
+          </div>
         </fieldset>
 
-        <fieldset class="form__group">
-          <legend class="visually-hidden">Выбор программы</legend>
-          <p class="form__program">
-            <input class="form__radio" type="radio" name="programm" value="slimming" id="slimming" checked>
-            <label class="form__label-radio" for="slimming">Похудение</label>
-          </p>
-          <p class="form__program">
-            <input class="form__radio" type="radio" name="programm" value="weight-gain" id="weight-gain">
-            <label class="form__label-radio" for="weight-gain">Набор массы</label>
-          </p>
-          <p class="form__program">
-            <input class="form__radio" type="radio" name="programm" value="not-know" id="not-know">
-            <label class="form__label-radio" for="not-know">Не знаю (Нужен ваш совет)</label>
-          </p>
+        <fieldset class="form__group form__group-textarea form__group--border">
+          <legend class="form__legend form__legend--textarea">Комментарий</legend>
+          <textarea class="form__textarea-comment"  name="comment">Расскажите обо всех повАдках кота</textarea>
         </fieldset>
 
-        <fieldset class="form__group">
-          <legend class="form__legend">Контактные данные(владельца кота)</legend>
-          <label class="form__label" for="email">E-mail:*</label>
-          <input class="form__email" type="email" name="email" id="email" placeholder="kuklachev@gmail.com" required>
-          <label class="form__label" for="tel">Телефон:*</label>
-          <input class="form__tel" type="tel" name="tel" pattern="8 \(\d{3}\) \d{3}-\d{2}-\d{2}" id="tel" placeholder="8 (960) 900-60-90" required>
-        </fieldset>
-
-        <fieldset class="form__group">
-          <legend class="form__legend">Комментарий</legend>
-          <textarea class="form__textarea-comment" name="comment">Расскажите обо всех повАдках кота</textarea>
-        </fieldset>
-
-        <fieldset class="form__group">
+        <fieldset class="form__group form__group-checkbox form__group--border">
           <legend class="form__legend">Дополнительно</legend>
-          <input class="form__checkbox" type="checkbox" name="sweetener" id="sweetener" checked>
-          <label class="form__label-checkbox" for="sweetener">Сахарозаменитель</label>
-          <input class="form__checkbox" type="checkbox" name="drinking-water" id="drinking-water">
-          <label class="form__label-checkbox" for="drinking-water">Питьевая вода</label>
-          <input class="form__checkbox" type="checkbox" name="milk" id="milk">
-          <label class="form__label-checkbox" for="milk">Молоко</label>
-          <input class="form__checkbox" type="checkbox" name="vitamins" id="vitamins">
-          <label class="form__label-checkbox" for="vitamins">Витамины</label>
+          <div class="form__checkbox-wrapper">
+            <p class="form__checkbox-greed">
+              <input class="form__checkbox" type="checkbox" name="sweetener" id="sweetener" checked>
+              <label class="form__label-checkbox" for="sweetener">Сахарозаменитель</label>
+            </p>
+            <p class="form__checkbox-greed">
+              <input class="form__checkbox" type="checkbox" name="drinking-water" id="drinking-water">
+              <label class="form__label-checkbox" for="drinking-water">Питьевая вода</label>
+            </p>
+            <p class="form__checkbox-greed">
+              <input class="form__checkbox" type="checkbox" name="milk" id="milk">
+              <label class="form__label-checkbox" for="milk">Молоко</label>
+            </p>
+            <p class="form__checkbox-greed">
+              <input class="form__checkbox" type="checkbox" name="vitamins" id="vitamins">
+              <label class="form__label-checkbox" for="vitamins">Витамины</label>
+            </p>
+          </div>
         </fieldset>
-        <button class="form__submit button" type="submit">отправить заявку</button>
-        <small class="form__small">* — Обязательные поля</small>
+        <div class="form__container-small">
+          <button class="form__submit button" type="submit">отправить заявку</button>
+          <small class="form__small">* — Обязательные поля</small>
+        </div>
       </form>
 
     </main>
@@ -112,7 +135,8 @@
           </p>
         </div>
       </div>
-      <img class="page-footer__map" src="img/location.png" width="320" height="362" alt="ул. Большая Конюшенная, д. 19/8 Санкт-Петербург">
+      <img class="page-footer__map" src="img/map.png" width="1440" height="400" alt="ул. Большая Конюшенная, д. 19/8 Санкт-Петербург">
+
       <div class="page-footer__container container">
         <a class="page-footer__logo">
           <img class="page-footer__logo-image logo-footer" src="https://via.placeholder.com/128x24" width="128" height="24" alt="Логотип «Кэт энерджи»">
